@@ -1,9 +1,12 @@
 Manner-Server
 =============
 
-Environment Setup:
+## Environment Setup
 
-App Server: Tomcat 7.0.54 (Servlet 3.x)
-Database: Mongo DB 2.6
-JDK: JDK 1.7
-Maven: Maven 3.1.1
+* App Server: Tomcat 7.0.54 (Servlet 3.x)
+* Database: Mongo DB 2.6
+* JDK: JDK 1.7
+* Maven: Maven 3.1.1
+
+
+Tomcat7 VM options: -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m
